[package]
name = "ergvein-protocol"
version = "0.1.0"
authors = ["Anton Gushcha <ncrashed@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "^1.6"
flate2 = "^1.0"
consensus-encode = { git = "https://github.com/NCrashed/consensus-encode" }
