[package]
name = "ergvein-protocol"
version = "0.1.0"
authors = ["Anton Gushcha <ncrashed@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fix = "^0.1"
flate2 = "^1.0"
consensus-encode = { git = "https://github.com/NCrashed/consensus-encode", rev="8c04d05aecc1d0f320fb1ebed0878772c1e83c72" }
bitcoin =  { version = "^0.26", features = [ "rand" ] }
bitcoin_hashes = "^0.9"
ergvein-filters = { git = "https://github.com/hexresearch/ergvein-filters", rev = "529d0dd4ff9bea3c0e2508ace972de58e2236740" }
mempool_filters = { path = "../btc-mempool-filters" }
chrono = "^0.4"
rand = "0.8.3"

[dev-dependencies]
rand = "0.8.3"
